[package]
name = "overpass-minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
osmpbf = "0.3"
rstar = "0.12"
bincode = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
byteorder = "1.5"
geo = "0.28"
geo-types = "0.7"
roaring = "0.10"
