[package]
name = "overpass-minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
osmpbf = "0.3"
rstar = "0.12"
bincode = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
byteorder = "1.5"
geo = "0.28"
geo-types = "0.7"
roaring = "0.10"
rayon = "1.10"
dashmap = "6.0"
parking_lot = { version = "0.12", features = ["serde"] }
zstd = "0.11"
rustc-hash = "1.1"
pprof = { version = "0.10", features = ["flamegraph"] }
